--- a/styles_tech.css
+++ b/styles_tech.css
@@ -283,15 +283,68 @@ a:active {
 }
 
 */
+html {
+	font-size: 16px;	
+}
 
 body {
 	font: 100%/1.4 Verdana, Arial, Helvetica, sans-serif;
+	font-size: 62.5%;
 	margin: 0;
+	line-height: 1.3;
+		
 }
 
-.header {
+#header {
 	display: block;
 	background-color: white;
 	box-shadow: 0px 3px 5px rgba(0,0,0,0.2);
-	
+	width: 100%;
+	overflow: hidden;
+	padding: 0;
 }
+
+#header_image {
+	width: 25.0em;
+	float: left;
+}
+
+#navigation {
+	margin: 2.5% 10% 0 0;
+	float: right;
+	display: inline-block;
+	padding: 0;
+}
+
+#navigation ul {
+	list-style-type: none;
+}
+
+#navigation ul li {
+	float: left;
+	display: list-item;
+	margin: 0;
+}
+
+#navigation ul li a {
+	text-decoration: none;
+	color: #555;
+	font-size: 30px;
+}
+
+#navigation ul li a:hover {
+	color: blue;
+}
+
+#main_content p {
+	font-size: 2em;
+}
+
+.content_heading {
+	text-align: center;
+}
+
+/*********************/
+/* RESPONSIVE DESIGN */
+/*********************/
+
