--- a/styles.css
+++ b/styles.css
@@ -283,18 +283,25 @@ a:active {
 }
 
 */
+
+
+/********/
+/* BASE */
+/********/
 html {
 	font-size: 16px;	
 }
 
 body {
 	font: 100%/1.4 Verdana, Arial, Helvetica, sans-serif;
-	font-size: 62.5%;
+	font-size: 0.625rem;
 	margin: 0;
 	line-height: 1.3;
-		
 }
 
+/**********/
+/* HEADER */
+/**********/
 #header {
 	display: block;
 	background-color: white;
@@ -305,15 +312,15 @@ body {
 }
 
 #header_image {
-	width: 25.0em;
+	width: 15.5rem;
 	float: left;
 }
 
 #navigation {
-	margin: 2.5% 10% 0 0;
 	float: right;
 	display: inline-block;
 	padding: 0;
+	margin-right: .5rem;
 }
 
 #navigation ul {
@@ -327,24 +334,44 @@ body {
 }
 
 #navigation ul li a {
+	display: block;
+	padding: 1.75rem 1.5rem .5rem 1.5rem;
 	text-decoration: none;
 	color: #555;
-	font-size: 30px;
+	font-size: 1.5em;
+	text-align: center;
 }
 
 #navigation ul li a:hover {
-	color: blue;
+	color: #3c3fa1;
 }
 
-#main_content p {
-	font-size: 2em;
-}
-
+/***************/
+/* SUBHEADINGS */
+/***************/
 .content_heading {
 	text-align: center;
+}
+
+/*****************/
+/* CONTENT AREAS */
+/*****************/
+#main_content p {
+	font-size: 1.25em;
 }
 
 /*********************/
 /* RESPONSIVE DESIGN */
 /*********************/
 
+@media (min-width: 800px) {
+	body {
+		font-size: 0.875rem;
+	}
+}
+
+@media (min-width: 1200px) {
+	body {
+		font-size: 1rem;
+	}
+}
