--- a/styles.css
+++ b/styles.css
@@ -52,13 +52,20 @@ body {
 	display: block;
 	padding: 1.75rem 1.5rem .5rem 1.5rem;
 	text-decoration: none;
-	color: #555;
 	font-size: 1.5em;
 	text-align: center;
+	
+	-webkit-transition: border-color .25s ease-in-out, color .25s ease-in-out;
+	-moz-transition: border-color .25s ease-in-out, color .25s ease-in-out;
+	-o-transition: border-color .25s ease-in-out, color .25s ease-in-out;
+	transition: border-color .25s ease-in-out, color .25s ease-in-out;
+	border-bottom: .2rem solid transparent;
+	color: #555;
 }
 
 #navigation ul li a:hover {
-	color: #3c3fa1;
+	border-bottom-color: #1A8CFF;
+	color: black;
 }
 
 /***************/
