--- a/styles.css
+++ b/styles.css
@@ -125,7 +125,7 @@ body {
 	padding: 8px 8px 8px 32px;
 	text-decoration: none;
 	font-size: 20px;
-	display: block;
+	display: none;
 	
 	-webkit-transition: border-color .25s ease-in-out, color .3s ease-in-out;
 	-moz-transition: border-color .25s ease-in-out, color .3s ease-in-out;
@@ -155,10 +155,11 @@ body {
 	background-color: #111;
 	padding: 10px;
 	right: 0;
+	display: none;
 }
 
 #mobile_menu_content li {
-	display: inline-block;
+	display: none;
 	padding: 10px;
 	width: 100%;
 }
@@ -166,7 +167,7 @@ body {
 #mobile_menu_content li a {
 	text-decoration: none;
 	font-size: 16px;
-	display: block;
+	display: none;
 	
 	-webkit-transition: border-color .25s ease-in-out, color .3s ease-in-out;
 	-moz-transition: border-color .25s ease-in-out, color .3s ease-in-out;
@@ -222,6 +223,10 @@ p {
 		display: inline-block;
 	}
 	
+	.sidenav a {
+		display: block;	
+	}
+	
 	#navigation {
 		display: none;
 	}
@@ -249,12 +254,17 @@ p {
 	}
 	
 	#mobile_menu_content {
-		display: none;
 		position: absolute;
 		top: 5rem;
 		right: 10px;
 		width: 35%;
-		
-		
+	}
+	
+	#mobile_menu_content li {
+		display: inline-block;
+	}
+	
+	#mobile_menu_content li a {
+		display: block;
 	}
 }
