--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,6 @@
 html {
 	font-size: 16px;	
 }
-
 body {
 	font: 100%/1.4 Verdana, Arial, Helvetica, sans-serif;
 	font-size: 0.625rem;
@@ -26,29 +25,24 @@ body {
 	padding: 0;
 	z-index: 1000;
 }
-
 #header_image {
 	width: 15.5rem;
 	float: left;
 }
-
 #navigation {
 	float: right;
 	display: inline-block;
 	padding: 0;
 	margin-right: .5rem;
 }
-
 #navigation ul {
 	list-style-type: none;
 }
-
 #navigation ul li {
 	float: left;
 	display: list-item;
 	margin: 0;
 }
-
 #navigation ul li a {
 	display: block;
 	padding: 1.75rem 1.5rem .5rem 1.5rem;
@@ -63,7 +57,6 @@ body {
 	border-bottom: .2rem solid transparent;
 	color: #555;
 }
-
 #navigation ul li a:hover {
 	border-bottom-color: #1A8CFF;
 	color: black;
@@ -78,7 +71,6 @@ body {
 	float: right;
 	margin: 2.75rem 2rem 0 0;
 }
-
 .bar1, .bar2, .bar3 {
 	width: 35px;
 	height: 5px;
@@ -86,18 +78,15 @@ body {
 	margin: 6px 0;
 	transition: 0.4s;
 }
-
 .change .bar1 {
 	-webkit-transform: rotate(-45deg) translate(-9px, 6px);
 	-moz-transform: rotate(-45deg) translate(-9px, 6px);
 	-o-transform: rotate(-45deg) translate(-9px, 6px);
 	transform: rotate(-45deg) translate(-9px, 6px);
 }
-
 .change .bar2 {
 	opacity: 0;
 }
-
 .change .bar3 {
 	-webkit-transform: rotate(45deg) translate(-9px, -6px);
 	-moz-transform: rotate(45deg) translate(-9px, -6px);
@@ -120,7 +109,6 @@ body {
 	padding-top: 15px;
 	transition: 0.5s;
 }
-
 .sidenav a {
 	padding: 8px 8px 8px 32px;
 	text-decoration: none;
@@ -134,7 +122,6 @@ body {
 	border-bottom: .2rem solid transparent;
 	color: #818181;
 }
-
 .sidenav a:hover {
 	border-bottom-color: #1A8CFF;
 	color: #f1f1f1;
@@ -149,7 +136,6 @@ body {
 	float: right;
 	margin: 2.75rem 2rem 0 0;
 }
-
 #mobile_menu_content {
 	list-style: none;
 	background-color: #111;
@@ -157,13 +143,11 @@ body {
 	right: 0;
 	display: none;
 }
-
 #mobile_menu_content li {
 	display: none;
 	padding: 10px;
 	width: 100%;
 }
-
 #mobile_menu_content li a {
 	text-decoration: none;
 	font-size: 16px;
@@ -176,7 +160,6 @@ body {
 	border-bottom: .2rem solid transparent;
 	color: #818181;
 }
-
 #mobile_menu ul li a:hover {
 	border-bottom-color: #1A8CFF;
 	color: #f1f1f1;
@@ -193,13 +176,64 @@ body {
 /* CONTENT AREAS */
 /*****************/
 #main_content {
-	padding-top: 8.5rem;
+	padding-top: 8rem;
 }
-
 p {
 	font-size: 1.25em;
 	text-align: center;
-	margin: 0 10% 0 10%
+	margin: 0 10% 0 10%;
+}
+
+p a {
+	text-decoration: none;
+}
+
+.textwrapper {
+	padding: 5% 0;
+}
+
+table {
+	border-collapse: separate;
+	border-spacing: 2px;
+}
+
+/*********************/
+/* BACKGROUND IMAGES */
+/*********************/
+.bgimage {
+	height: 400px;
+	margin: 0;
+	padding: 0;
+	opacity: .75;
+	
+	background-attachment: fixed;
+    background-position: top;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+#firstimage {
+	background-image: url("Images/TEN Background Image 1.jpg");
+}
+
+#secondimage {
+	background-image: url("Images/TEN Background Image 2.jpg");
+}
+
+#thirdimage {
+	background-image: url("Images/TEN Background Image 3.jpg");
+}
+
+#fourthimage {
+	background-image: url("Images/TEN Background Image 5.jpg");
+}
+
+#fifthimage {
+	background-image: url("Images/TEN Background Image 6.jpg");
+}
+
+#test {
+	display: block;
 }
 
 /*********************/
@@ -211,13 +245,11 @@ p {
 		font-size: 0.875rem;
 	}
 }
-
 @media (min-width: 1200px) {
 	body {
 		font-size: 1rem;
 	}
 }
-
 @media (max-width: 930px) {
 	#small_menu {
 		display: inline-block;
@@ -237,9 +269,12 @@ p {
 	
 	#header {
 		transition: width .5s;
+	}	
+	
+	.bgimage {
+		height: 300px;
 	}
 }
-
 @media (max-width: 565px) {
 	#navigation {
 		display: none;
@@ -266,5 +301,9 @@ p {
 	
 	#mobile_menu_content li a {
 		display: block;
+	}
+	
+	.bgimage {
+		height: 200px;
 	}
 }
